--- a/templates/admin/default/about.html.twig
+++ b/templates/admin/default/about.html.twig
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="card">
         <div class="card-header">
-            <h4>About framework</h4>
+            <h4 class="card-title">About framework</h4>
         </div>
         <div class="card-body">
             <p>
@@ -17,7 +17,7 @@
 
     <div class="card">
         <div class="card-header">
-            <h4><a href="https://github.com/acantepie/umbrella-core" class="text-primary">umbrella-core</a> bundle</h4>
+            <h4 class="card-title"><a href="https://github.com/acantepie/umbrella-core" class="text-primary">umbrella-core</a> bundle</h4>
         </div>
         <div class="card-body">
             <p>
@@ -41,7 +41,7 @@
 
     <div class="card">
         <div class="card-header">
-            <h4><a href="https://github.com/acantepie/umbrella-admin" class="text-primary">umbrella-admin</a> bundle</h4>
+            <h4 class="card-title"><a href="https://github.com/acantepie/umbrella-admin" class="text-primary">umbrella-admin</a> bundle</h4>
         </div>
         <div class="card-body">
             <p>
