--- a/templates/admin/js/index.html.twig
+++ b/templates/admin/js/index.html.twig
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="card">
         <div class="card-header">
-            <h4>Principle</h4>
+            <h4 class="card-title">Principle</h4>
         </div>
         <div class="card-body">
             <p>
@@ -35,7 +35,7 @@
         <div class="col-md-6">
             <div class="card">
                 <div class="card-header">
-                    <h4><span class="text-primary">data-xhr</span> attribute</h4>
+                    <h4 class="card-title"><span class="text-primary">data-xhr</span> attribute</h4>
                 </div>
                 <div class="card-body">
                     <p>
@@ -60,7 +60,7 @@
         <div class="col-md-6">
             <div class="card">
                 <div class="card-header">
-                    <h4><span class="text-primary">data-spinner</span> attribute</h4>
+                    <h4 class="card-title"><span class="text-primary">data-spinner</span> attribute</h4>
                 </div>
                 <div class="card-body">
                     <p>
@@ -80,7 +80,7 @@
         <div class="col-md-6">
             <div class="card">
                 <div class="card-header">
-                    <h4><span class="text-primary">data-confirm</span> attribute</h4>
+                    <h4 class="card-title"><span class="text-primary">data-confirm</span> attribute</h4>
                 </div>
                 <div class="card-body">
                     <p>
@@ -100,7 +100,7 @@
         <div class="col-md-6">
             <div class="card">
                 <div class="card-header d-flex align-items-center">
-                    <h4><span class="text-primary">data-xhr-id</span> attribute</h4>
+                    <h4 class="card-title"><span class="text-primary">data-xhr-id</span> attribute</h4>
                     <span class="badge bg-danger ms-auto">New</span>
                 </div>
                 <div class="card-body">
@@ -124,7 +124,7 @@
 
     <div class="card">
         <div class="card-header">
-            <h4>JavaScript API</h4>
+            <h4 class="card-title">JavaScript API</h4>
         </div>
         <div class="card-body">
             <p>
@@ -138,7 +138,7 @@
 
     <div class="card">
         <div class="card-header">
-            <h4>To go further...</h4>
+            <h4 class="card-title">To go further...</h4>
         </div>
         <div class="card-body">
             <h5>Error handling</h5>
