--- a/templates/admin/menu/index.html.twig
+++ b/templates/admin/menu/index.html.twig
@@ -5,7 +5,7 @@
         <div class="col-md-6">
             <div class="card">
                 <div class="card-header">
-                    <h4>How create a menu</h4>
+                    <h4 class="card-title">How create a menu</h4>
                 </div>
                 <div class="card-body">
 
@@ -21,7 +21,7 @@
         <div class="col-md-6">
             <div class="card">
                 <div class="card-header">
-                    <h4>Use your own menu on Admin</h4>
+                    <h4 class="card-title">Use your own menu on Admin</h4>
                 </div>
                 <div class="card-body">
                     <p>
@@ -39,7 +39,7 @@
 
             <div class="card">
                 <div class="card-header">
-                    <h4>Customize breadcrumb on admin page</h4>
+                    <h4 class="card-title">Customize breadcrumb on admin page</h4>
                 </div>
                 <div class="card-body">
                     <p>
