--- a/templates/admin/notification/index.html.twig
+++ b/templates/admin/notification/index.html.twig
@@ -5,7 +5,7 @@
         <div class="col-md-6">
             <div class="card">
                 <div class="card-header">
-                    <h4>How to</h4>
+                    <h4 class="card-title">How to</h4>
                 </div>
                 <div class="card-body">
                     <p>Generate entity and provider :</p>
@@ -23,7 +23,7 @@
         <div class="col-md-6">
             <div class="card">
                 <div class="card-header">
-                    <h4>Example 1 : Create a notification with form</h4>
+                    <h4 class="card-title">Example 1 : Create a notification with form</h4>
                 </div>
                 <div class="card-body">
                     <form enctype="multipart/form-data" method="POST" data-mount="Form">
@@ -39,7 +39,7 @@
 
             <div class="card">
                 <div class="card-header">
-                    <h4>Example 2 : Start a counter using <b>messenger bundle</b> and notify progress</h4>
+                    <h4 class="card-title">Example 2 : Start a counter using <b>messenger bundle</b> and notify progress</h4>
                 </div>
                 <div class="card-body">
                     <form enctype="multipart/form-data" method="POST" data-mount="Form">
