--- a/templates/admin/tabs/index.html.twig
+++ b/templates/admin/tabs/index.html.twig
@@ -6,7 +6,7 @@
         <div class="col-lg-6">
             <div class="card">
                 <div class="card-header">
-                    <h5>Config : default</h5>
+                    <h4 class="card-title">Config : default</h4>
                 </div>
                 <div class="card-body">
                     {{ nav_start() }}
@@ -27,7 +27,7 @@
 
             <div class="card">
                 <div class="card-header">
-                    <h5>Config : pills</h5>
+                    <h4 class="card-title">Config : pills</h4>
                 </div>
                 <div class="card-body">
                     {{ nav_config('pills') }}
@@ -50,7 +50,7 @@
 
             <div class="card">
                 <div class="card-header">
-                    <h5>Config : pills / active strategy : current_route</h5>
+                    <h4 class="card-title">Config : pills / active strategy : current_route</h4>
                 </div>
                 <div class="card-body">
                     {{ nav_config('pills', {'active_strategy': 'current_route'}) }}
@@ -75,7 +75,7 @@
 
             <div class="card">
                 <div class="card-header">
-                    <h5>Config : advanced (see code)</h5>
+                    <h4 class="card-title">Config : advanced (see code)</h4>
                 </div>
                 <div class="card-body">
                     {{ nav_config('pills_justified', {
@@ -118,7 +118,7 @@
         <div class="col-lg-6">
             <div class="card">
                 <div class="card-header">
-                    <h5>Config : bordered</h5>
+                    <h4 class="card-title">Config : bordered</h4>
                 </div>
                 <div class="card-body">
                     {{ nav_config('bordered') }}
@@ -141,7 +141,7 @@
 
             <div class="card">
                 <div class="card-header">
-                    <h5>Config : pills / active strategy : first</h5>
+                    <h4 class="card-title">Config : pills / active strategy : first</h4>
                 </div>
                 <div class="card-body">
                     {{ nav_config('pills', {'active_strategy': 'first'}) }}
@@ -164,7 +164,7 @@
 
             <div class="card">
                 <div class="card-header">
-                    <h5>Config : pills / active strategy : manual</h5>
+                    <h4 class="card-title">Config : pills / active strategy : manual</h4>
                 </div>
                 <div class="card-body">
                     {{ nav_config('pills', {'active_strategy': null}) }}
