--- a/templates/admin/umbrella-config/index.html.twig
+++ b/templates/admin/umbrella-config/index.html.twig
@@ -4,7 +4,7 @@
 
     <div class="card">
         <div class="card-header">
-            <h4>UmbrellaCoreBundle</h4>
+            <h4 class="card-title">UmbrellaCoreBundle</h4>
         </div>
         <div class="card-body">
             <hl-code class="language-yaml">{{ umbrella_core_config }}</hl-code>
@@ -13,7 +13,7 @@
 
     <div class="card">
         <div class="card-header">
-            <h4>UmbrellaAdminBundle</h4>
+            <h4 class="card-title">UmbrellaAdminBundle</h4>
         </div>
         <div class="card-body">
             <hl-code class="language-yaml">{{ umbrella_admin_config }}</hl-code>
