--- a/templates/admin/form/select2/_async_entity_options.html.twig
+++ b/templates/admin/form/select2/_async_entity_options.html.twig
@@ -1,7 +1,5 @@
-<h4 class="card-title">
-    <a data-bs-toggle="collapse" href="#async-options" class="dropdown-toggle">Options </a>
-</h4>
-<div class="collapse" id="async-options">
+<h4>Options </h4>
+<div>
     <table class="table">
         <thead>
         <tr>
