--- a/templates/admin/form/select2/_choice_options.html.twig
+++ b/templates/admin/form/select2/_choice_options.html.twig
@@ -1,7 +1,5 @@
-<h4 class="card-title">
-    <a data-bs-toggle="collapse" href="#choice-options" class="dropdown-toggle">Options </a>
-</h4>
-<div id="choice-options" class="collapse">
+<h4>Options </h4>
+<div>
     <p>All options of <a href="https://symfony.com/doc/current/reference/forms/types/choice.html">ChoiceType</a> +</p>
 
     <table class="table">
