--- a/templates/admin/notification/index.html.twig
+++ b/templates/admin/notification/index.html.twig
@@ -31,7 +31,7 @@
                         {{ form_rest(new_notification_form) }}
 
                         <button type="submit" class="btn btn-primary">
-                            <i class="mdi mdi-send"></i> Send
+                            <i class="mdi mdi-send me-1"></i> Send
                         </button>
                     </form>
                 </div>
@@ -51,7 +51,7 @@
                         {{ form_rest(counter_form) }}
 
                         <button type="submit" class="btn btn-primary">
-                            <i class="mdi mdi-send"></i> Send
+                            <i class="mdi mdi-send me-1"></i> Send
                         </button>
                     </form>
                 </div>
