--- a/templates/landing.html.twig
+++ b/templates/landing.html.twig
@@ -61,7 +61,7 @@
                             </div>
                             <h4 class="mt-3">Bootstrap 5 Admin theme</h4>
                             <p class="text-muted mt-2 mb-0">
-                                Use beautiful <a class="https://tabler.io/">Tabler.io</a> admin bootstrap theme.
+                                Use beautiful <a href="https://tabler.io/">Tabler.io</a> admin bootstrap theme.
                             </p>
                         </div>
                     </div>
