--- a/templates/admin/datatable/multiple.html.twig
+++ b/templates/admin/datatable/multiple.html.twig
@@ -1,7 +1,7 @@
 {% extends "@UmbrellaAdmin/layout.html.twig" %}
 
 {% block content %}
-    <div class="alert alert-info">
+    <div class="alert alert-primary">
         Try edit space mission ( <i class="mdi mdi-pencil"></i> icon ) and change his <b>mission status</b>.
     </div>
     {% for mission_status, table in tables %}
