--- a/templates/admin/default/about.html.twig
+++ b/templates/admin/default/about.html.twig
@@ -21,7 +21,7 @@
         </div>
         <div class="card-body">
             <p>
-                Contains all UI components, they can be used on back-office but also on front-office :
+                Libraries of component, they can be used on back-office but also on front-office :
             </p>
 
             <ul>
@@ -50,7 +50,7 @@
 
             <ul>
                 <li class="pb-2">
-                    <strong>Admin theme and template</strong>.
+                    <strong>Admin theme and template</strong> : Based on <a href="https://tabler.io/">Tabler.io</a>.
                 </li>
                 <li class="pb-2">
                     <strong>User management</strong> : Admin view to edit admin user, Profile view to edit your own account and security system to login and recover password.
