--- a/templates/admin/js/index.html.twig
+++ b/templates/admin/js/index.html.twig
@@ -24,7 +24,7 @@
                 <li>action : redirect &rightarrow; <code>window.location.href=...</code></li>
             </ul>
 
-            <p class="alert alert-info">
+            <p class="alert alert-primary">
                 Easiest way to return response in good format is to use the service <b>JsResponseBuilder</b> on Symfony controller.
             </p>
 
