--- a/templates/admin/notification/index.html.twig
+++ b/templates/admin/notification/index.html.twig
@@ -23,7 +23,8 @@
         <div class="col-md-6">
             <div class="card">
                 <div class="card-header">
-                    <h4 class="card-title">Example 1 : Create a notification with form</h4>
+                    <h4 class="card-title">Try it yourself</h4>
+                    <div class="card-subtitle">Create a simple notification</div>
                 </div>
                 <div class="card-body">
                     <form enctype="multipart/form-data" method="POST" data-mount="Form">
@@ -39,12 +40,13 @@
 
             <div class="card">
                 <div class="card-header">
-                    <h4 class="card-title">Example 2 : Start a counter using <b>messenger bundle</b> and notify progress</h4>
+                    <h4 class="card-title">Try it yourself</h4>
+                    <div class="card-subtitle">Start a counter using <b>messenger bundle</b> and notify progress</div>
                 </div>
                 <div class="card-body">
                     <form enctype="multipart/form-data" method="POST" data-mount="Form">
 
-                        <div class="alert alert-info">
+                        <div class="alert alert-primary">
                             Messenger is a Symfony component. See <a href="https://symfony.com/doc/current/messenger.html" target="_blank">Messenger: Sync & Queued Message Handling</a>
                         </div>
                         {{ umbrella_form_theme(counter_form) }}
