--- a/templates/admin/default/about.html.twig
+++ b/templates/admin/default/about.html.twig
@@ -33,7 +33,7 @@
                     <strong>Menu / Breadcrumb</strong> : Menu / breadcrumb creation component.
                 </li>
                 <li class="pb-2">
-                    <strong>Form</strong> : Add some useful FormType and theme - Choice2Type / Entity2Type (select2), AutoCompleteType (select2 with async loading), DatePicker / DateTimepicker,  Collection, Ckeditor, ...
+                    <strong>Form</strong> : Add some useful FormType and theme - UmbrellaChoiceType / UmbrellaEntityType, AutoCompleteType, DatePicker / DateTimepicker,  Collection, Ckeditor, ...
                 </li>
             </ul>
         </div>
