--- a/templates/admin/form/select/_async_entity_options.html.twig
+++ b/templates/admin/form/select/_async_entity_options.html.twig
@@ -35,24 +35,35 @@
             <td>Multiple selection if true.</td>
         </tr>
         <tr>
-            <th>min_search_length</th>
-            <td>int</td>
-            <td>0</td>
-            <td>Start to filter options after n characters typed.</td>
+            <th>hide_selected</th>
+            <td>bool</td>
+            <td>true</td>
+            <td>Hide selected options on dropdown.</td>
+        </tr>
+        <tr>
+            <th>highlight</th>
+            <td>bool</td>
+            <td>true</td>
+            <td>Highlight searched options on dropdown.</td>
+        </tr>
+        <tr>
+            <th>max_items</th>
+            <td>int | null</td>
+            <td>null</td>
+            <td>Only effective if "multiple" is true : the max number of items the user can select.</td>
         </tr>
         <tr>
             <th>template_html</th>
-            <td>string</td>
+            <td>string | null</td>
             <td>null</td>
             <td>Mustache template (by default, 2 variables are available : id and text).</td>
         </tr>
         <tr>
             <th>template_selector</th>
-            <td>string</td>
+            <td>string | null</td>
             <td>null</td>
             <td>Css selector of mustache template in HTML dom.</td>
         </tr>
-
         </tbody>
     </table>
 </div>
