--- a/templates/admin/form/theme.html.twig
+++ b/templates/admin/form/theme.html.twig
@@ -32,7 +32,7 @@
             </div>
             <p>
                 You can define a default value for <code>umbrella_form_theme</code> twig helper.
-                This is useful to avoid specify the theme used on all your form.
+                This is useful to avoid specify the layout used on all your form.
             </p>
             <hl-code class="language-yaml">{{ source('admin/form/theme/single_form_default_config.txt') }}</hl-code>
             <hl-code class="language-twig">{{ source('admin/form/theme/single_form_bs_default.txt') }}</hl-code>
