--- a/assets/front/front.scss
+++ b/assets/front/front.scss
@@ -2,24 +2,15 @@
 @import "~bootstrap/scss/functions";
 @import "~bootstrap/scss/variables";
 @import "~umbrella_admin/scss/config/variables";
-@import "~umbrella_admin/scss/config/custom-variables";
 @import "~bootstrap/scss/bootstrap";
-
-// Structure
-@import "~umbrella_admin/scss/structure/general";
 
 //Fonts
 @import '~@mdi/font/scss/materialdesignicons.scss';
 
-//Components
-@import "~umbrella_admin/scss/components/avatar";
-@import "~umbrella_admin/scss/components/mixins";
-@import "~umbrella_admin/scss/components/buttons";
-@import "~umbrella_admin/scss/components/reboot";
-@import "~umbrella_admin/scss/components/type";
-@import "~umbrella_admin/scss/components/utilities";
-
-
 section {
   min-height: calc(100% - 70px);
+}
+
+.big-icon {
+  font-size: 3em;
 }
