--- a/templates/landing.html.twig
+++ b/templates/landing.html.twig
@@ -54,13 +54,11 @@
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="text-center p-3">
-                            <div class="avatar-sm m-auto">
-                                <span class="avatar-title bg-primary-lighten rounded-circle">
-                                    <i class="mdi mdi-layers-outline text-primary font-24"></i>
-                                </span>
+                            <div class="big-icon bg-primary-lighten rounded-circle">
+                                <i class="mdi mdi-layers-outline text-primary"></i>
                             </div>
-                            <h4 class="mt-3">Bootstrap 5 Admin theme</h4>
-                            <p class="text-muted mt-2 mb-0">
+                            <h4 class="mt-2 mb-2">Bootstrap 5 Admin theme</h4>
+                            <p class="text-muted mb-0">
                                 Use beautiful <a href="https://tabler.io/">Tabler.io</a> admin bootstrap theme.
                             </p>
                         </div>
@@ -68,13 +66,11 @@
 
                     <div class="col-lg-4">
                         <div class="text-center p-3">
-                            <div class="avatar-sm m-auto">
-                                <span class="avatar-title bg-primary-lighten rounded-circle">
-                                    <i class="mdi mdi-symfony text-primary font-24"></i>
-                                </span>
+                            <div class="big-icon bg-primary-lighten rounded-circle">
+                                <i class="mdi mdi-symfony text-primary"></i>
                             </div>
-                            <h4 class="mt-3">Symfony 5 / php 7.4</h4>
-                            <p class="text-muted mt-2 mb-0">
+                            <h4 class="mt-2 mb-2">Symfony 5 / php 7.4</h4>
+                            <p class="text-muted mb-0">
                                 Developed with latest Symfony and PHP version.
                             </p>
                         </div>
@@ -82,14 +78,12 @@
 
                     <div class="col-lg-4">
                         <div class="text-center p-3">
-                            <div class="avatar-sm m-auto">
-                                <span class="avatar-title bg-primary-lighten rounded-circle">
-                                    <i class="mdi mdi-table text-primary font-24"></i>
-                                </span>
+                            <div class="big-icon bg-primary-lighten rounded-circle">
+                                <i class="mdi mdi-table text-primary"></i>
                             </div>
-                            <h4 class="mt-3">DataTable / TreeTable</h4>
-                            <p class="text-muted mt-2 mb-0">
-                                Create complex and dynamic admin view with DataTable component (based on <a href="https://datatables.net/" class="text-primary">DataTable.js</a>).
+                            <h4 class="mt-2 mb-2">DataTable / TreeTable</h4>
+                            <p class="text-muted mb-0">
+                                Create complex and dynamic admin view with DataTable (based on <a href="https://datatables.net/" class="text-primary">DataTable.js</a>).
                             </p>
                         </div>
                     </div>
@@ -98,13 +92,11 @@
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="text-center p-3">
-                            <div class="avatar-sm m-auto">
-                                <span class="avatar-title bg-primary-lighten rounded-circle">
-                                    <i class="mdi mdi-menu text-primary font-24"></i>
-                                </span>
+                            <div class="big-icon bg-primary-lighten rounded-circle">
+                                <i class="mdi mdi-menu text-primary"></i>
                             </div>
-                            <h4 class="mt-3">Menu</h4>
-                            <p class="text-muted mt-2 mb-0">
+                            <h4 class="mt-2 mb-2">Menu</h4>
+                            <p class="text-muted mb-0">
                                 Configure menu you need with one PHP file.
                             </p>
                         </div>
@@ -112,27 +104,23 @@
 
                     <div class="col-lg-4">
                         <div class="text-center p-3">
-                            <div class="avatar-sm m-auto">
-                                <span class="avatar-title bg-primary-lighten rounded-circle">
-                                    <i class="mdi mdi-form-select text-primary font-24"></i>
-                                </span>
+                            <div class="big-icon bg-primary-lighten rounded-circle">
+                                <i class="mdi mdi-form-select text-primary"></i>
                             </div>
-                            <h4 class="mt-3">Add some useful form fields</h4>
-                            <p class="text-muted mt-2 mb-0">
-                                Add Select, Date / DateTime, FileUpload, Ckeditor (and more) form Theme / Type.
+                            <h4 class="mt-2 mb-2">Add some useful form fields</h4>
+                            <p class="text-muted mb-0">
+                                Add Select, Date / DateTime, Ckeditor, ... Form.
                             </p>
                         </div>
                     </div>
 
                     <div class="col-lg-4">
                         <div class="text-center p-3">
-                            <div class="avatar-sm m-auto">
-                                <span class="avatar-title bg-primary-lighten rounded-circle">
-                                    <i class="mdi mdi-dots-horizontal text-primary font-24"></i>
-                                </span>
+                            <div class="big-icon bg-primary-lighten rounded-circle">
+                                <i class="mdi mdi-dots-horizontal text-primary"></i>
                             </div>
-                            <h4 class="mt-3">And more ...</h4>
-                            <p class="text-muted mt-2 mb-0">
+                            <h4 class="mt-2 mb-2">And more ...</h4>
+                            <p class="text-muted mb-0">
                                 Notifications system, User management, Maker commands...
                             </p>
                         </div>
