--- a/templates/admin/form/select.html.twig
+++ b/templates/admin/form/select.html.twig
@@ -54,6 +54,7 @@
                     </div>
                     <div class="col-md-6">
                         {{ form_row(form.asyncChoiceMissionTemplated) }}
+{#                        {{ form_row(form.asyncChoiceMissionPaginated) }}#}
                     </div>
                 </div>
                 {% include "admin/form/select/_async_entity_options.html.twig" %}
