--- a/templates/admin/form/theme.html.twig
+++ b/templates/admin/form/theme.html.twig
@@ -8,7 +8,7 @@
         <div class="card-body">
             <div class="row">
                 <div class="col-md-6 mb-2">
-                    <h5 class="fw-bold">Bootstrap 5 default theme</h5>
+                    <h5>Bootstrap 5 default theme</h5>
                     <hl-code class="language-twig">{{ source('admin/form/theme/single_form_bs.txt') }}</hl-code>
 
                     <h5>Example :</h5>
@@ -19,7 +19,7 @@
 
                 </div>
                 <div class="col-md-6">
-                    <h5 class="fw-bold">Bootstrap 5 horizontal theme</h5>
+                    <h5>Bootstrap 5 horizontal theme</h5>
                     <hl-code class="language-twig">{{ source('admin/form/theme/single_form_bs_horizontal.txt') }}</hl-code>
 
                     <h5>Example :</h5>
