--- a/templates/landing.html.twig
+++ b/templates/landing.html.twig
@@ -9,7 +9,7 @@
         <meta content="Framework to create administration backends on symfony 5." name="description" />
         <meta content="Adrien Cantepie" name="author" />
 
-        <link rel='stylesheet' href="https://fonts.googleapis.com/css?family=Nunito" type="text/css" />
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
         {{ encore_entry_link_tags('front') }}
         <script async defer src="https://buttons.github.io/buttons.js"></script>
     </head>
